--- a/client/src/components/Login/Login.module.css
+++ b/client/src/components/Login/Login.module.css
@@ -9,7 +9,7 @@
 .loginContainer {
     margin: 10%; 
     width: 20%;
-    height: 40%;
+    height: 38%;
     background-color:rgb(254, 254, 254);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
 }
@@ -17,6 +17,14 @@
 .loginHeader {
     text-align: center;
     padding-top: 10%;
+    padding-bottom: 5%;
+    font-family: 'Roboto', sans-serif;
+    font-size: 30px;
+}
+
+.text {
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
 }
 
 span {
@@ -38,15 +46,17 @@ a:hover {
 .textInput {
     width: 80%;
     background-color: rgb(245, 245, 245);
-    padding: 15px;
+    padding: 4%;
     margin: 20px auto 20px auto;
     display:block;
     border: none;
     border-radius: 4px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
 }
 
 input[type=submit] {
-    width: 80%;
+    width: 88%;
     background-color: rgb(52, 113, 235);
     color: white;
     padding: 15px;
@@ -54,6 +64,8 @@ input[type=submit] {
     display:block;
     border: none;
     border-radius: 4px;
+    font-family: 'Roboto', sans-serif;
+    font-size: 12px;
 }
 
 p {
