--- a/client/src/components/Login/Login.module.css
+++ b/client/src/components/Login/Login.module.css
@@ -12,6 +12,8 @@
     height: 38%;
     background-color:rgb(254, 254, 254);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
+    min-width: 300px;
+    min-height: 350px;
 }
 
 .loginHeader {
