--- a/client/src/components/ChannelSidebar/ChannelSidebar.module.css
+++ b/client/src/components/ChannelSidebar/ChannelSidebar.module.css
@@ -22,9 +22,14 @@ p {
 
 .channel {
     font-family: 'Roboto', sans-serif;
-    margin: 20px 0 0 20px;
-    margin-top: 10px;
+    margin: 10px 0 0 0px;
     font-size: 14px;
+    height: 20px;
+    padding: 6px 0 0 20px;
+}
+
+.channel:hover {
+    background-color: #333752;
 }
 
 .directMessages {
