--- a/client/src/containers/Chat/Chat.module.css
+++ b/client/src/containers/Chat/Chat.module.css
@@ -8,8 +8,9 @@
 
 .header {
     grid-area: header;
-    background-color: rgb(250, 250, 250);
+    background-color: rgb(252, 252, 252);
     height: 8vh;
+    border-bottom: 1px solid rgb(170, 170, 170);
 }
 
 .teamSidebar {
@@ -17,7 +18,7 @@
     height: 100%;
     width: 80px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
-    background-color:yellow;
+    background-color: #1e2233;
 }
 
 .channelSidebar {
@@ -25,7 +26,7 @@
     height: 100%;
     width: 200px;
     box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.16), 0 0 0 1px rgba(0, 0, 0, 0.08);
-    background-color: #1e2233;
+    background-color: #24283d;
 }
 
 .main {
