--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -1,5 +1,5 @@
 .channelHeader {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 20px;
     font-weight: bold;
     margin: 2% 0 0 2%;
