--- a/client/src/components/Login/Login.module.css
+++ b/client/src/components/Login/Login.module.css
@@ -19,12 +19,12 @@
 .loginHeader {
     text-align: center;
     padding-top: 10%;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 30px;
 }
 
 .text {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 12px;
     text-align: center;
 }
@@ -53,11 +53,11 @@ a:hover {
     display:block;
     border: none;
     border-radius: 4px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 12px;
 }
 
-input[type=submit] {
+[type=submit] {
     width: 88%;
     background-color: rgb(52, 113, 235);
     color: white;
@@ -66,7 +66,7 @@ input[type=submit] {
     display:block;
     border: none;
     border-radius: 4px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 12px;
 }
 
