--- a/client/src/components/Message/Message.module.css
+++ b/client/src/components/Message/Message.module.css
@@ -4,7 +4,7 @@
 }
 
 .top {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     text-align: left;
 }
 
@@ -23,7 +23,7 @@
 }
 
 .message {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 14px;
     text-align: left;
     color: black;
