--- a/client/src/components/SignUp/SignUp.module.css
+++ b/client/src/components/SignUp/SignUp.module.css
@@ -12,7 +12,7 @@
     height: 56%;
     background-color:rgb(254, 254, 254);
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-size: 12px;
     min-width: 400px;
     min-height: 550px;
@@ -71,7 +71,7 @@ a:hover {
     border-radius: 4px;
 }
 
-input[type=button] {
+[type=button] {
     width: 88%;
     background-color: rgb(52, 113, 235);
     color: white;
