--- a/client/src/components/TeamSidebar/TeamSidebar.module.css
+++ b/client/src/components/TeamSidebar/TeamSidebar.module.css
@@ -3,6 +3,7 @@
     width: 50px;
     background-color: #676066;
     color: #fff;
+    font-family: 'Lato', sans-serif;
     margin: 10px auto auto auto;
     display: flex;
     align-items: center;
@@ -15,4 +16,18 @@
     border-style: solid;
     border-width: thick;
     border-color: #767676;
+}
+
+.addTeamModal {
+    height: 300px;
+    background-color: white;
+    margin: 200px 50px 0 50px;
+    outline: none;
+    padding-top: 30px;
+}
+
+.modalOverlay {
+    position: fixed;
+    margin: 0 0 0 0;
+    background-color: rgba(255, 255, 255, 0.75);
 }
