--- a/client/src/components/Header/Header.module.css
+++ b/client/src/components/Header/Header.module.css
@@ -2,5 +2,5 @@
     font-family: 'Lato', sans-serif;
     font-size: 20px;
     font-weight: bold;
-    margin: 2% 0 0 2%;
+    padding: 2% 0 0 2%;
 }
