--- a/client/src/containers/Chat/Chat.module.css
+++ b/client/src/containers/Chat/Chat.module.css
@@ -11,6 +11,9 @@
     background-color: rgb(252, 252, 252);
     height: 8vh;
     border-bottom: 1px solid rgb(170, 170, 170);
+    /* position: relative; */
+    /* z-index: 10; */
+    /* box-shadow: 7px 1px 6px 6px #ccc; */
 }
 
 .teamSidebar {
