--- a/client/src/components/AddChannel/AddChannel.module.css
+++ b/client/src/components/AddChannel/AddChannel.module.css
@@ -27,6 +27,7 @@
 }
 
 .createButton {
+    min-width: 120px;
     width: 20%;
     display:inline-block;
     background-color: rgb(52, 113, 235);
@@ -38,6 +39,7 @@
 
 .cancelButton {
     display:inline-block;
+    min-width: 120px;
     width: 20%;
     background-color: rgb(115, 121, 134);
     color: white;
