--- a/client/src/components/AddTeam/AddTeam.module.css
+++ b/client/src/components/AddTeam/AddTeam.module.css
@@ -27,8 +27,9 @@
 }
 
 .createButton {
-    width: 20%;
     display:inline-block;
+    min-width: 120px;
+    width: 20%;
     background-color: rgb(52, 113, 235);
     color: white;
     border: none;
@@ -38,6 +39,7 @@
 
 .cancelButton {
     display:inline-block;
+    min-width: 120px;
     width: 20%;
     background-color: rgb(115, 121, 134);
     color: white;
