--- a/client/src/components/ChannelSidebar/ChannelSidebar.module.css
+++ b/client/src/components/ChannelSidebar/ChannelSidebar.module.css
@@ -18,9 +18,8 @@ p {
 .channelsHeading {
     font-family: 'Lato', sans-serif;
     text-align: left;
-    margin: 20px 0 0 20px;
+    margin: 40px 0 0 20px;
     display: inline-block;
-    margin-top: 60px;
     font-size: 16px;
     color: #9193a3;
     width: 160px;
@@ -53,4 +52,23 @@ p {
     float: right;
     color: white;
 }
+
+.inviteToTeam {
+    font-family: 'Lato', sans-serif;
+    font-size: 14px;
+    margin: 30px 0 0 20px;
+    color: #9193a3;
+}
+
+.userAdd {
+    float: right;
+    margin-right: 20px;
+}
+
+.userAdd:hover {
+    float: right;
+    margin-right: 20px;
+    color: white;
+}
+
 
