--- a/client/src/components/Login/Login.module.css
+++ b/client/src/components/Login/Login.module.css
@@ -3,7 +3,9 @@
     flex-direction: row;
     justify-content: center;
     height: 100vh;
-    background-color: rgb(52, 113, 235);
+    /* background-color: rgb(52, 113, 235); */
+    /* background-color: #24283d; */
+    background-color: #191E2a;
 }
 
 .loginContainer {
@@ -60,6 +62,7 @@ a:hover {
 [type=submit] {
     width: 88%;
     background-color: rgb(52, 113, 235);
+    /* background-color: #24283d; */
     color: white;
     padding: 15px;
     margin: 20px auto 20px auto;
